	Fix low luck AA not inflicting damage
	Fix 'Attack Subs' dialog only showing up on Host
	Fix surface ships being allowed to move into enemy SZ during non-combat
	Add option to continue after victory for all non-AA50 games
	Fix exception on host when getting technology
	Fix partial retreat from amphib assault not working
	Should be able to stop in SZ with a trn/sub, then continue trip

* Added 'Neutrals Are Impassable' property to eliminate neutrals from pathfinding (ComradeKev)

* on windows, put saved games in users home folder, rather than the triplea install directory.  this works better on Vista. (sgb)

* fix [ 1945380 ] battle calculator window buttons lost (sgb)

* update launch4j generated exes to use launch4j 3.0.1 (sgb)

* updated embedded jre to 6_11 (sgb)

Changes for 1.0.3.0

* Disable game properties button if there are no game properties (Chris McIntosh)

* Fix spelling in classic xml (Chris McIntosh)

* The following list of bugs were fixed- primarily for AA50 (Comradekev)
	#2554414 Only one Mechanized Infantry per tank should be allowed
	#2554418 Jet Fighters not attacking at 4
	Non-aa50 games throw exceptions when trying to affect Tech Tokens
	Chinese unit max for territory placement not limited to Chinese-only units
	Territory Turn Limit removed from options
	Option added for inclusion of Tech development
	China should be able to place units on newly captured territories
	Added Japanese Inf in Solomon Islands (aa-42)
	Fix null pointer when choosing NOT to attack subs
	Paratroops should be limited to 1 per bomber
	Bombers should not be able to move before picking up paratroops
	Radar/damaged factory icons not displaying
	Fix factory repair cost for Increased Factory Production technology
	#2474056 Captured AA ownership
	#2554411 Rockets allowed to overfly impassables
	#2554412 Rockets firing after Non-Combat move in AA50
	#2554419 Factory repair costs with Enhanced Production technology
	Factories added with edit mode are damaged