@@ -35,6 +35,8 @@ Changes for 1.0.3.1
 	Fix exception on host when getting technology
 	Fix partial retreat from amphib assault not working
 	Should be able to stop in SZ with a trn/sub, then continue trip
+	
+* Add ShowMapOnly mode for passively viewing games (Smutt) 
 
 * Added 'Neutrals Are Impassable' property to eliminate neutrals from pathfinding (ComradeKev)
 
